--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body { padding-top: 40px; }
+.padded { padding-top: 40px; }
 @media screen and (max-width: 768px) {
-    body { padding-top: 0px; }
+    .padded { padding-top: 0px; }
 }
