--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 .padded { padding-top: 40px; }
 @media screen and (max-width: 768px) {
-    .padded { padding-top: 0px; }
+    .padded {
+        padding-top: 60px;
+        padding-bottom: 42px; 
+    }
 }
